--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -21,6 +21,17 @@
         <file alias="Chat.css">css/themes/Flat/Chat.css</file>
         <file alias="Chords.css">css/themes/Flat/Chords.css</file>
     </qresource>
+    <qresource prefix="/style/themes/Volcano">
+        <file alias="BaseTrack.css">css/themes/Volcano/BaseTrack.css</file>
+        <file alias="NinjamWindow.css">css/themes/Volcano/NinjamWindow.css</file>
+        <file alias="LocalTrack.css">css/themes/Volcano/LocalTrack.css</file>
+        <file alias="Dialogs.css">css/themes/Volcano/Dialogs.css</file>
+        <file alias="General.css">css/themes/Volcano/General.css</file>
+        <file alias="MainWindow.css">css/themes/Volcano/MainWindow.css</file>
+        <file alias="PublicRooms.css">css/themes/Volcano/PublicRooms.css</file>
+        <file alias="Chat.css">css/themes/Volcano/Chat.css</file>
+        <file alias="Chords.css">css/themes/Volcano/Chords.css</file>
+    </qresource>
     <qresource prefix="/style/themes/Black">
         <file alias="BaseTrack.css">css/themes/Black/BaseTrack.css</file>
         <file alias="NinjamWindow.css">css/themes/Black/NinjamWindow.css</file>
