--- a/src/resources/css/themes/Volcano/General.css
+++ b/src/resources/css/themes/Volcano/General.css
@@ -8,7 +8,7 @@ QPushButton
     stop: 0.0 #FDE5A9,
     stop: 1.0 #FFB301);
 
-    border-radius: 1px;
+    border-radius: 2px;
     border: 1px outset #68300F;
 }
 
@@ -207,7 +207,12 @@ QTabBar::tab
 QTabBar::tab:selected,
 QTabBar::tab:hover
 {
-    background-color: rgba(255, 255, 255, 20);/* rgb(180, 180, 180)*/
+    background-color: rgb(239, 114, 24);
+}
+
+QTabBar::tab:selected
+{
+    border-top-right-radius: 3px;
 }
 
 QTabBar::tab:!selected
@@ -218,18 +223,15 @@ QTabBar::tab:!selected
 
 QMenuBar::item
 {
-    color: lightgray;
+    color: rgb(220, 220, 220);
     background: transparent; /*rgb(225, 225, 225);*/
 }
 
 QMenuBar
 {
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-        stop: 0.0 #F48D6A,
-        stop: 0.35 #E45E38,
-        stop: 1.0 #D63101);
+    background-color: rgba(255, 255, 255, 15);
 
-    border-bottom: 1px solid #D6471B;
+    border-bottom: 1px solid rgba(0, 0, 0, 20);
     border-top: 1px solid rgb(90, 90, 90);
     border-left: 1px solid rgb(90, 90, 90);
     border-right: 1px solid rgb(90, 90, 90);
