--- a/src/resources/css/themes/Volcano/PublicRooms.css
+++ b/src/resources/css/themes/Volcano/PublicRooms.css
@@ -2,14 +2,15 @@
 
 JamRoomViewPanel
 {
-    background-color: rgba(0, 0, 0, 40);
+    background-color: #C55E1E;
     border: 1px solid #762F05;
-    border-radius: 1px;
+    border-radius: 3px;
 }
 
 JamRoomViewPanel #content                   /* where the user names and wave form are showed */
 {
     background: rgba(0, 0, 0, 10);
+    border-top: 1px solid rgba(0, 0, 0, 15);
 }
 
 JamRoomViewPanel #labelName             /* the server name (ninbot.com, ninjamer.com, etc) */
@@ -33,7 +34,7 @@ JamRoomViewPanel  #labelRoomType
 
 PlayerLabel
 {
-    color: lightgray;
+    color: white;
 }
 
 WavePeakPanel
