Improving the background color in left area

--- a/src/resources/css/themes/Volcano/MainWindow.css
+++ b/src/resources/css/themes/Volcano/MainWindow.css
@@ -55,7 +55,7 @@ QMainWindow
 
 #leftPanel
 {
-    background-color: rgba(0, 0, 0, 30);
+    background-color: #BD5A1D;
     border-radius: 3px;
 }
 
