--- a/src/resources/css/themes/Volcano/PublicRooms.css
+++ b/src/resources/css/themes/Volcano/PublicRooms.css
@@ -7,8 +7,8 @@ JamRoomViewPanel
     border-radius: 3px;
 }
 
-JamRoomViewPanel[empty="true"]{
-    border: none;
+JamRoomViewPanel[empty="true"]
+{
     background-color: rgba(0, 0, 0, 15);
     border: 1px solid rgba(0, 0, 0, 100);
 }
@@ -21,7 +21,6 @@ JamRoomViewPanel[empty="true"] #labelRoomStatus
 JamRoomViewPanel[empty="true"] #labelName
 {
     color: black;
-    font-weight: normal;
 }
 
 JamRoomViewPanel #content                   /* where the user names and wave form are showed */
