--- a/src/resources/css/themes/Volcano/General.css
+++ b/src/resources/css/themes/Volcano/General.css
@@ -1,12 +1,12 @@
-/* General stylesheet for Flat theme
+/* General stylesheet for Volcano theme
 -------------------------------------*/
 
 /* Button ----------------------*/
 QPushButton
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-    stop: 0.0 #FDE5A9,
-    stop: 1.0 #FFB301);
+        stop: 0.0 #FDE5A9,
+        stop: 1.0 #FFB301);
 
     border-radius: 2px;
     border: 1px outset #68300F;
@@ -14,14 +14,24 @@ QPushButton
 
 QPushButton:checked
 {
-    background-color: rgb(180, 180, 180);
+    background-color: #B35925;
+
+    border: 1px inset #68300F;
+
 }
 
 QPushButton:hover
 {
-    background-color: white;
-    color: black;
-    border: 1px solid rgb(120, 120, 120);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop: 0.0 #fed87b,
+        stop: 1.0 #ffe23b);
+}
+
+QPushButton:hover:checked
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop: 0.0 #B35925,
+        stop: 1.0 #b4673b);
 }
 
 QPushButton:disabled
@@ -35,7 +45,7 @@ QPushButton:disabled
 QScrollBar:vertical,
 QScrollBar:horizontal
 {
-    border: none;
+    border: 1px solid rgba(0, 0, 0, 45);
     background-color: rgba(0, 0, 0, 40);
     margin: 0px;
 }
@@ -52,18 +62,40 @@ QScrollBar:horizontal
     margin-top: 6px;
 }
 
-QScrollBar::handle:vertical,
-QScrollBar::handle:horizontal
-{
-  border: 1px solid rgba(0, 0, 0, 45);
-  background-color: rgba(255, 255, 255, 140);
-  margin: 0px;
-}
-
-QScrollBar::handle:horizontal:hover,
 QScrollBar::handle:vertical:hover
 {
-    background-color: rgba(255, 255, 255, 200);
+  background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+      stop: 0.0 #FFD470,
+      stop: 0.47 #FDE09B,
+      stop: 0.0 #FDE5A9,
+      stop: 0.92 #EF820D);
+}
+
+QScrollBar::handle:horizontal:hover
+{
+  background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+      stop: 0.0 #FFD470,
+      stop: 0.47 #FDE09B,
+      stop: 0.0 #FDE5A9,
+      stop: 0.92 #EF820D);
+}
+
+QScrollBar::handle:horizontal
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop: 0.0 #FFD470,
+        stop: 0.47 #FDE5A9,
+        stop: 0.49 #FFB301,
+        stop: 0.92 #EF820D);
+}
+
+QScrollBar::handle:vertical
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+        stop: 0.0 #FFD470,
+        stop: 0.47 #FDE5A9,
+        stop: 0.49 #FFB301,
+        stop: 0.92 #EF820D);
 }
 
 QScrollBar::handle:vertical
@@ -124,17 +156,18 @@ QScrollBar::sub-page:horizontal
 -----------------------------------------------------------------------*/
 QLineEdit
 {
-    background-color: rgba(255, 255, 255, 20);
-    border-color: rgba(0, 0, 0, 45);
-    color: black;
+    background-color: rgb(254, 181, 102);
+    border-color: rgba(0, 0, 0, 90);
+    color: rgba(0, 0, 0, 220);
 }
 
-QLineEdit:focus,
-QLineEdit#groupNameField:focus
+QLineEdit:focus
 {
     border-color: rgba(0, 0, 0, 90);
-    background-color: white;
+    background-color: rgba(254, 181, 102, 150);
     color: black;
+    selection-background-color: rgba(0, 0, 0, 90);
+    selection-color: rgba(254, 181, 102, 150);
 }
 
 
@@ -172,8 +205,7 @@ stop: 1.0 #FFB301);
 
 QSlider::handle:hover
 {
-    background: rgb(250, 250, 250);
-    border: 1px outset rgb(90, 90, 90);
+background-color: #FDE5A9;
 }
 
 QSlider::handle:horizontal
@@ -200,14 +232,18 @@ QSlider::handle:vertical
 /* TabBar ----------------------*/
 QTabBar::tab
 {
-    background-color: red; /* rgb(200, 200, 200);*/
+    background-color: rgba(0, 0, 0, 20); /* rgb(200, 200, 200);*/
     color: lightgray;
 }
 
-QTabBar::tab:selected,
-QTabBar::tab:hover
+QTabBar::tab:selected
 {
     background-color: rgb(239, 114, 24);
+}
+
+QTabBar::tab:hover
+{
+    background-color: rgba(239, 114, 24, 150);
 }
 
 QTabBar::tab:selected
@@ -218,13 +254,23 @@ QTabBar::tab:selected
 QTabBar::tab:!selected
 {
     margin-top: 3px; /* make non-selected tabs look smaller */
-    color: rgb(90, 90, 90);
+    color: rgb(20, 20, 20);
 }
 
 QMenuBar::item
 {
     color: rgb(220, 220, 220);
     background: transparent; /*rgb(225, 225, 225);*/
+}
+
+QMenuBar::item:selected { /* hover effect for menu bar items */
+
+    border-radius: 2px;
+}
+
+QMenuBar::item:pressed { /* 'button pressed' item style */
+
+    border-radius: 2px;
 }
 
 QMenuBar
@@ -240,8 +286,18 @@ QMenuBar
 QMenu
 {
     border: 1px outset rgb(80, 80, 80);
-    color: black;
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-    stop:0 rgb(250, 250, 250),
-    stop:1 rgb(230, 230, 230));
+    color: rgb(220, 220, 220);
+    background: rgb(217, 157, 116);
+}
+
+QMenu::item:selected
+{
+    color: rgb(220, 220, 220);
+    background-color: rgb(212, 144, 97);
+}
+
+
+QTabWidget::pane
+{
+    background-color: transparent;
 }
