change selection color for combo boxes part 2

--- a/src/resources/css/themes/Volcano/General.css
+++ b/src/resources/css/themes/Volcano/General.css
@@ -166,7 +166,7 @@ QLineEdit:focus
     border-color: rgba(0, 0, 0, 90);
     background-color: rgba(254, 181, 102, 150);
     color: black;
-    selection-background-color: rgba(0, 0, 0, 90);
+    selection-background-color: rgb(179, 89, 37);
     selection-color: rgba(254, 181, 102, 150);
 }
 
