--- a/src/resources/css/themes/Volcano/General.css
+++ b/src/resources/css/themes/Volcano/General.css
@@ -271,6 +271,7 @@ QMenuBar::item:selected { /* hover effect for menu bar items */
 QMenuBar::item:pressed { /* 'button pressed' item style */
 
     border-radius: 2px;
+    background-color: rgb(212, 144, 97);
 }
 
 QMenuBar
