VOLCANO Theme change selection color for combo boxes part 2 / menu color changes (#532)
* change selection color for combo boxes part 2

* menu selection pressed color change

* menu color fix

--- a/src/resources/css/themes/Volcano/General.css
+++ b/src/resources/css/themes/Volcano/General.css
@@ -166,7 +166,7 @@ QLineEdit:focus
     border-color: rgba(0, 0, 0, 90);
     background-color: rgba(254, 181, 102, 150);
     color: black;
-    selection-background-color: rgba(0, 0, 0, 90);
+    selection-background-color: rgb(179, 89, 37);
     selection-color: rgba(254, 181, 102, 150);
 }
 
@@ -271,6 +271,7 @@ QMenuBar::item:selected { /* hover effect for menu bar items */
 QMenuBar::item:pressed { /* 'button pressed' item style */
 
     border-radius: 2px;
+    background-color: rgb(212, 144, 97);
 }
 
 QMenuBar
@@ -287,13 +288,13 @@ QMenu
 {
     border: 1px outset rgb(80, 80, 80);
     color: rgb(220, 220, 220);
-    background: rgb(217, 157, 116);
+    background: rgb(210, 142, 100);
 }
 
 QMenu::item:selected
 {
     color: rgb(220, 220, 220);
-    background-color: rgb(212, 144, 97);
+    background-color: rgb(217, 157, 116);
 }
 
 
