VOLCANO Theme SOLO/St inv button hover (check) color fix (#533)
* solo button hover check color fix

* stereo inv button hover fix when not xmit

--- a/src/resources/css/themes/Volcano/BaseTrack.css
+++ b/src/resources/css/themes/Volcano/BaseTrack.css
@@ -72,7 +72,8 @@ BaseTrackView[unlighted="true"] #buttonBoostMinus12,
 BaseTrackView[unlighted="true"] #buttonBoostZero,
 BaseTrackView[unlighted="true"] #buttonBoostPlus12,
 BaseTrackView[unlighted="true"] #soloButton,
-BaseTrackView[unlighted="true"] #muteButton
+BaseTrackView[unlighted="true"] #muteButton,
+BaseTrackView[unlighted="true"] QPushButton#buttonStereoInversion
 {
     background-color: rgba(0, 0, 0, 30);
     border: none;
@@ -99,7 +100,7 @@ BaseTrackView[unlighted="true"] #muteButton
 
 #soloButton:hover:checked
 {
-    background-color: rgb(110, 255, 80);
+    background-color: rgb(125, 255, 108);
     border-color: rgb(45, 45, 45);
 }
 
